# msg_pass

./: CMakeLists.txt  README.md
include/: mp_conn.h
include/msg_pass/: mp_buf_sizes.h  mp_client.h  mp_server.h
src/: mp_client.c  mp_conn.c  mp_server.c
tests/: hello_client.c  hello_server.c
